@@ -8,6 +8,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -18,7 +19,7 @@ import java.util.Objects;
  */
 public final class QuoteDataCleaner {
 
-    private static final List<String> DEFAULT_COLUMN_ORDER = List.of(
+    private static final List<String> DEFAULT_COLUMN_ORDER = Arrays.asList(
             "QuoteRequestedOn",
             "Status",
             "ReferenceNumber",
